[Sp1] Reorder folder architecture

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="bread-favicon.png" type="image/png" sizes="16x16">
 
 		<!-- STYLESHEETS -->
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 
 	<body>
@@ -15,10 +15,10 @@
 		<header>
 			<table id="table1">
 				<tr>
-					<td> <img src="logo.png" alt="Break Bread Logo" width="150" height="150"> </td>
+					<td> <img src="./img/logo.png" alt="Break Bread Logo" width="150" height="150"> </td>
 					<td><br><p><b>Break Bread Bakery</b></p>
 					<p style="font-size:24px"><i>Break Bread and Share Space</i></p><br>
-					<td><img src="pretty-address.png" alt="OurAddress" width="175" height="111"></td>
+					<td><img src="./img/pretty-address.png" alt="OurAddress" width="175" height="111"></td>
 				</tr>
 			</table>
 			<hr>
@@ -28,7 +28,7 @@
 	  <main>
 			<br><br>
 			<div id="image_div">
-				<img src="bread-basket.jpg" />
+				<img src="./img/bread-basket.jpg" />
 			</div>
 			<br>
 	    <h1>COMING SOON</h1>
