[Sp1] Modified favicon + added bootstrap for responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 		<!-- PAGE INFO -->
 		<title>BreakBread</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="bread-favicon.png" type="image/png" sizes="16x16">
+		<link rel="shortcut icon" href="./favicon.ico" />
 
 		<!-- STYLESHEETS -->
+		<link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 
