[Sp1] Modified layout to use bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -14,33 +14,41 @@
 	<body>
 		<!-- HEADER -->
 		<header>
-			<table id="table1">
-				<tr>
-					<td> <img src="./img/logo.png" alt="Break Bread Logo" width="150" height="150"> </td>
-					<td><br><p><b>Break Bread Bakery</b></p>
-					<p style="font-size:24px"><i>Break Bread and Share Space</i></p><br>
-					<td><img src="./img/pretty-address.png" alt="OurAddress" width="175" height="111"></td>
-				</tr>
-			</table>
-			<hr>
+			<div class="container">
+				<div class="row justify-content-between align-items-center">
+					<div class="logo col-3">
+						<a href="./index.html"><img src="./img/logo.png" alt="logo" width="150"></a>
+					</div>
+					<div class="titles col-6">
+						<h2>Break Bread Bakery</h2>
+						<h3><i>Break bread and share space</i></h3>
+					</div>
+					<div class="contact col-3">
+						<img src="./img/pretty-address.png" alt="contact" width="200">
+					</div>
+				</div>
+				<hr>
+			</div>
 		</header>
 
 		<!-- MAIN -->
 	  <main>
-			<br><br>
-			<div id="image_div">
+			<div class="container">
 				<img src="./img/bread-basket.jpg" />
+				<h1>COMING SOON</h1>
 			</div>
-			<br>
-	    <h1>COMING SOON</h1>
 	  </main>
 
 		<!-- FOOTER -->
 		<footer>
-			<hr>
-			<p><b>120 Tremont Street, Boston MA 02115</b><br>
-			Open Monday-Friday: 8:00am - 6:00pm  |  Saturday: 8:00am - 4:00pm <br>
-			<small>&copy; 2017 <em>BreakBread</em></small></p>
+			<div class="container">
+				<hr>
+				<p>
+					<b>120 Tremont Street, Boston MA 02115</b><br>
+					Open Monday-Friday: 8:00am - 6:00pm  |  Saturday: 8:00am - 4:00pm <br>
+					<small>&copy; 2018 <em>BreakBread</em></small>
+				</p>
+			</div>
 		</footer>
 	</body>
 </html>
