[Sp2] Filled home page

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,39 @@
 		<!-- MAIN -->
 	  <main>
 			<div class="container">
-				<img src="./img/bread-basket.jpg" />
-				<h1>COMING SOON</h1>
+				<div class="row align-items-center">
+					<div class="col-7">
+						<img src="./img/interior.png" alt="Interior">
+					</div>
+					<div class="col-5">
+						<p>
+							Welcome to our space! Come in and break some bread with us and your
+							family.
+						</p>
+					</div>
+				</div>
+				<div class="row align-items-center">
+					<div class="col-5">
+						<p>
+							All our baked goods are made fresh daily! Come sit and enjoy a great
+							treat.
+						</p>
+					</div>
+					<div class="col-7">
+						<img src="./img/baked_goods.png" alt="Baked goods">
+					</div>
+				</div>
+				<div class="row align-items-center">
+					<div class="col-7">
+						<img src="./img/desserts.png" alt="Desserts">
+					</div>
+					<div class="col-5">
+						<p>
+							Or make life sweeter... Eat dessert first! Give into yout temptations
+							and taste our amazing desserts. Fit for any sweet tooth!
+						</p>
+					</div>
+				</div>
 			</div>
 	  </main>
 
@@ -46,7 +77,11 @@
 				<p>
 					<b>120 Tremont Street, Boston MA 02115</b><br>
 					Open Monday-Friday: 8:00am - 6:00pm  |  Saturday: 8:00am - 4:00pm <br>
-					<small>&copy; 2018 <em>BreakBread</em></small>
+					<small>
+						<span class="space-right">Site development <em>Team Awesome</em></span>
+						<span class="space-right">Photography <em>Stock internet images</em></span>
+						<span>&copy; 2018 <em>BreakBread</em></span>
+					</small>
 				</p>
 			</div>
 		</footer>
