--- a/public/comingsoon.html
+++ b/public/comingsoon.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 				<p><center> 
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./comingsoon.html">
 						<img src="./img/ButtonAboutUs.JPG" alt="About Us" width="175" height="50"></a>
 					<a href="http://www.breakbread.space/comingsoon.html">
 						<img src="./img/ButtonProduct.JPG" alt="Product" width="175" height="50" ></a>
@@ -43,41 +43,8 @@
 
 		<!-- MAIN -->
 	  <main>
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-7">
-						<img src="./img/interior.png" alt="Interior">
-					</div>
-					<div class="col-5">
-						<p>
-							Welcome to our space! Come in and break some bread with us and your
-							family.
-						</p>
-					</div>
-				</div>
-				<div class="row align-items-center">
-					<div class="col-5">
-						<p>
-							All our baked goods are made fresh daily! Come sit and enjoy a great
-							treat.
-						</p>
-					</div>
-					<div class="col-7">
-						<img src="./img/baked_goods.png" alt="Baked goods">
-					</div>
-				</div>
-				<div class="row align-items-center">
-					<div class="col-7">
-						<img src="./img/desserts.png" alt="Desserts">
-					</div>
-					<div class="col-5">
-						<p>
-							Or make life sweeter... Eat dessert first! Give into your temptations
-							and taste our amazing desserts. Fit for any sweet tooth!
-						</p>
-					</div>
-				</div>
-			</div>
+		<img src="./img/bread-basket.JPG" />
+	    <h1>COMING SOON</h1>
 	  </main>
 
 		<!-- FOOTER -->
