--- a/public/index.html
+++ b/public/index.html
@@ -39,17 +39,29 @@
 						<img src="./img/interior.png" alt="Interior">
 					</div>
 					<div class="col-5">
-						<p>
+						<!-- <p>
 							Welcome to our space! Come in and break some bread with us and your
 							family.
+						</p> -->
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+							ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+							aliquip ex ea commodo consequat.
 						</p>
 					</div>
 				</div>
 				<div class="row align-items-center">
 					<div class="col-5">
-						<p>
+						<!-- <p>
 							All our baked goods are made fresh daily! Come sit and enjoy a great
 							treat.
+						</p> -->
+						<p>
+							Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui officia deserunt mollit
+							anim id est laborum.
 						</p>
 					</div>
 					<div class="col-7">
@@ -61,9 +73,15 @@
 						<img src="./img/desserts.png" alt="Desserts">
 					</div>
 					<div class="col-5">
-						<p>
+						<!-- <p>
 							Or make life sweeter... Eat dessert first! Give into yout temptations
 							and taste our amazing desserts. Fit for any sweet tooth!
+						</p> -->
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+							ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+							aliquip ex ea commodo consequat.
 						</p>
 					</div>
 				</div>
