Fixed broken links

--- a/public/coming_soon.html
+++ b/public/coming_soon.html
@@ -27,23 +27,23 @@
 						<img src="./img/pretty-address.png" alt="contact" width="200">
 					</div>
 				</div>
-				<p><center> 
-					<a href="./comingsoon.html">
+				<p><center>
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonAboutUs.JPG" alt="About Us" width="175" height="50"></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonProduct.JPG" alt="Product" width="175" height="50" ></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonServices.JPG" alt="Services" width="175" height="50" ></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonContactUs.JPG" alt="Contact Us" width="175" height="50" ></a>
-				</center></p>			
+				</center></p>
 				<hr>
 			</div>
 		</header>
 
 		<!-- MAIN -->
 	  <main>
-		<img src="./img/bread-basket.JPG" />
+			<img src="./img/bread-basket.jpg" alt="Fresh bread">
 	    <h1>COMING SOON</h1>
 	  </main>
 
