--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
 					</div>
 				</div>
 				<p><center>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonAboutUs.JPG" alt="About Us" width="175" height="50"></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonProduct.JPG" alt="Product" width="175" height="50" ></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonServices.JPG" alt="Services" width="175" height="50" ></a>
-					<a href="http://www.breakbread.space/comingsoon.html">
+					<a href="./coming_soon.html">
 						<img src="./img/ButtonContactUs.JPG" alt="Contact Us" width="175" height="50" ></a>
 				</center></p>
 				<hr>
