--- a/public/coming_soon.html
+++ b/public/coming_soon.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 				<p><center>
-					<a href="./coming_soon.html">
+					<a href="./about_us.html">
 						<img src="./img/ButtonAboutUs.JPG" alt="About Us" width="175" height="50"></a>
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonProduct.JPG" alt="Product" width="175" height="50" ></a>
