--- a/public/about_us.html
+++ b/public/about_us.html
@@ -82,11 +82,11 @@
 							fresh bread to take home for their own family or to simply sit in the store, 
 							“break bread” and share in an experience of some delicious bread.  As 
 							the business continued to grow, they expanded their market by selling 
-							other products.
+							other products, such as cakes, cookies, and pastries.
 						</p></center>
 					</div>
 				</div>
-				<h3><bold>Location and Phone Number</bold></h3>
+				<h3><b>Location and Phone Number</b></h3>
 				<br>
 				<div class="row align-items-center">
 					<div class="col-5">
@@ -95,10 +95,11 @@
 							treat.
 						</p> -->
 						<p>
-							Located conveniently near the Park St T Station, Break Bread Bakery is
-							easy to get to. Our view from across the Boston Common is lovely 
-							to share your bread by.  If you have any questions, stop by or give us a 
-							call at (508) 659-9989!  We would love to hear from you.
+							Located conveniently near the Park St T Station in historic Boston, Break 
+							Bread Bakery is easy to get to. Our view across Tremont Street to the 
+							Granary Burial Ground is lovely to share your bread by.  If you have any 
+							questions, stop by or give us a call at (508) 659-9989!  We would love 
+							to hear from you.
 						</p>
 					</div>
 					<div class="col-7">
