--- a/public/about_us.html
+++ b/public/about_us.html
@@ -35,7 +35,7 @@
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonServices.JPG" alt="Services" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
-						<img src="./img/ButtonContactUs.JPG" alt="Contact Us" width="175" height="50" ></a>
+						<img src="./img/ButtonSpecials.JPG" alt="Specials" width="175" height="50" ></a>
 				</center></p>
 				<hr>
 				<div class="row justify-content-between align-items-center">
