[Sp 3] changing .JPG to .jpg on the webpages

--- a/public/about_us.html
+++ b/public/about_us.html
@@ -29,13 +29,13 @@
 				</div>
 				<p><center>
 					<a href="./about_us.html">
-						<img src="./img/ButtonAboutUs.JPG" alt="About Us" width="175" height="50"></a>
+						<img src="./img/ButtonAboutUs.jpg" alt="About Us" width="175" height="50"></a>
 					<a href="./coming_soon.html">
-						<img src="./img/ButtonProduct.JPG" alt="Product" width="175" height="50" ></a>
+						<img src="./img/ButtonProduct.jpg" alt="Product" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
-						<img src="./img/ButtonServices.JPG" alt="Services" width="175" height="50" ></a>
+						<img src="./img/ButtonServices.jpg" alt="Services" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
-						<img src="./img/ButtonSpecials.JPG" alt="Specials" width="175" height="50" ></a>
+						<img src="./img/ButtonSpecials.jpg" alt="Specials" width="175" height="50" ></a>
 				</center></p>
 				<hr>
 				<div class="row justify-content-between align-items-center">
@@ -103,7 +103,7 @@
 						</p>
 					</div>
 					<div class="col-7">
-						<img src="./img/map.jpg" alt="Map">
+						<img src="./img/map.png" alt="map">
 					</div>
 				</div>
 			</div>
