[SP 3]Added contact form

--- a/public/about_us.html
+++ b/public/about_us.html
@@ -106,6 +106,15 @@
 						<img src="./img/map.png" alt="map">
 					</div>
 				</div>
+				<h3><b>Contact Us</b></h3>
+				<br>
+				<div class="row align-items-center">
+					<form action="./message_confirmation.html">
+						<input id="name" type="text" class="form-control" placeholder="Name">
+						<textarea class="form-control" placeholder="Message" rows="5"></textarea>
+						<input id="submit" type="submit" class="form-control" value="Submit">
+					</form>
+				</div>
 			</div>
 	  </main>
 
