[Sp4] Add product page, update links on buttons for Product for all pages, add verbiage to home page.
These changes were done by Aniris paired with Karen.  But Aniris isn't set up to add content to our project, so Karen moved it over.

--- a/public/coming_soon.html
+++ b/public/coming_soon.html
@@ -30,7 +30,7 @@
 				<p><center>
 					<a href="./about_us.html">
 						<img src="./img/ButtonAboutUs.jpg" alt="About Us" width="175" height="50"></a>
-					<a href="./coming_soon.html">
+					<a href="./product.html">
 						<img src="./img/ButtonProduct.jpg" alt="Product" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonServices.jpg" alt="Services" width="175" height="50" ></a>
