--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 				<p><center>
 					<a href="./about_us.html">
 						<img src="./img/ButtonAboutUs.jpg" alt="About Us" width="175" height="50"></a>
-					<a href="./coming_soon.html">
+					<a href="./product.html">
 						<img src="./img/ButtonProduct.jpg" alt="Product" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonServices.jpg" alt="Services" width="175" height="50" ></a>
@@ -54,10 +54,13 @@
 							family.
 						</p> -->
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-							ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-							aliquip ex ea commodo consequat.
+							Welcome to Break Bread Bakery! Come in and break some bread with us.  
+							Our staff will make you feel like family.  We bring tradition, fun, 
+							and history into our business, taking pride in our warm and inviting setting for all.  
+							We strive to be constantly and consistently friendly, attentive, and courteous. 
+							We want each customer’s experience to be full of delight, and we focus on 
+							all aspects involved: great food, gracious service, warm atmosphere, 
+							heady aromas, and irresistible displays. We can’t wait to see you!
 						</p>
 					</div>
 				</div>
@@ -68,10 +71,11 @@
 							treat.
 						</p> -->
 						<p>
-							Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat non proident, sunt in culpa qui officia deserunt mollit
-							anim id est laborum.
+							All our baked goods are made fresh daily! Our amazing bakery staff 
+							works tirelessly to deliver the best quality products to our customers.  
+							We only use the best and natural ingredients for our delicious treats.  
+							All of our sourcing is local, and we take pride in being part of the community.  
+							Come sit and enjoy a great treat.
 						</p>
 					</div>
 					<div class="col-7">
@@ -88,10 +92,11 @@
 							and taste our amazing desserts. Fit for any sweet tooth!
 						</p> -->
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-							ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-							aliquip ex ea commodo consequat.
+							Or make life sweeter... Eat dessert first! Sweets, cakes, 
+							and pies are made with love and dedication - and it shows!  
+							We are passionate about our lucious, sugary goodnesses. Give 
+							into your temptations and taste our amazing desserts, 
+							fit for any sweet tooth! 
 						</p>
 					</div>
 				</div>
