--- a/public/product.html
+++ b/public/product.html
@@ -43,7 +43,7 @@
 						
 					</div>
 					<div class="titles col-6">
-						<h2>About Us</h2>
+						<h2>Our Products</h2>
 					</div>
 					<div class="contact col-3">
 						
