[Sp4] Modified footer credits & Filled product page

--- a/public/coming_soon.html
+++ b/public/coming_soon.html
@@ -56,7 +56,7 @@
 					Open Monday-Friday: 8:00am - 6:00pm  |  Saturday: 8:00am - 4:00pm <br>
 					<small>
 						<span class="space-right">Site development <em>Team Awesome</em></span>
-						<span class="space-right">Photography <em>Stock internet images</em></span>
+						<span class="space-right">Ideas <em>flourbakery.com</em></span>
 						<span>&copy; 2018 <em>BreakBread</em></span>
 					</small>
 				</p>
