--- a/public/index.html
+++ b/public/index.html
@@ -54,12 +54,12 @@
 							family.
 						</p> -->
 						<p>
-							Welcome to Break Bread Bakery! Come in and break some bread with us.  
-							Our staff will make you feel like family.  We bring tradition, fun, 
-							and history into our business, taking pride in our warm and inviting setting for all.  
-							We strive to be constantly and consistently friendly, attentive, and courteous. 
-							We want each customer’s experience to be full of delight, and we focus on 
-							all aspects involved: great food, gracious service, warm atmosphere, 
+							Welcome to Break Bread Bakery! Come in and break some bread with us.
+							Our staff will make you feel like family.  We bring tradition, fun,
+							and history into our business, taking pride in our warm and inviting setting for all.
+							We strive to be constantly and consistently friendly, attentive, and courteous.
+							We want each customer’s experience to be full of delight, and we focus on
+							all aspects involved: great food, gracious service, warm atmosphere,
 							heady aromas, and irresistible displays. We can’t wait to see you!
 						</p>
 					</div>
@@ -71,10 +71,10 @@
 							treat.
 						</p> -->
 						<p>
-							All our baked goods are made fresh daily! Our amazing bakery staff 
-							works tirelessly to deliver the best quality products to our customers.  
-							We only use the best and natural ingredients for our delicious treats.  
-							All of our sourcing is local, and we take pride in being part of the community.  
+							All our baked goods are made fresh daily! Our amazing bakery staff
+							works tirelessly to deliver the best quality products to our customers.
+							We only use the best and natural ingredients for our delicious treats.
+							All of our sourcing is local, and we take pride in being part of the community.
 							Come sit and enjoy a great treat.
 						</p>
 					</div>
@@ -92,11 +92,11 @@
 							and taste our amazing desserts. Fit for any sweet tooth!
 						</p> -->
 						<p>
-							Or make life sweeter... Eat dessert first! Sweets, cakes, 
-							and pies are made with love and dedication - and it shows!  
-							We are passionate about our lucious, sugary goodnesses. Give 
-							into your temptations and taste our amazing desserts, 
-							fit for any sweet tooth! 
+							Or make life sweeter... Eat dessert first! Sweets, cakes,
+							and pies are made with love and dedication - and it shows!
+							We are passionate about our lucious, sugary goodnesses. Give
+							into your temptations and taste our amazing desserts,
+							fit for any sweet tooth!
 						</p>
 					</div>
 				</div>
@@ -112,7 +112,7 @@
 					Open Monday-Friday: 8:00am - 6:00pm  |  Saturday: 8:00am - 4:00pm <br>
 					<small>
 						<span class="space-right">Site development <em>Team Awesome</em></span>
-						<span class="space-right">Photography <em>Stock internet images</em></span>
+						<span class="space-right">Ideas <em>flourbakery.com</em></span>
 						<span>&copy; 2018 <em>BreakBread</em></span>
 					</small>
 				</p>
