--- a/public/message_confirmation.html
+++ b/public/message_confirmation.html
@@ -30,9 +30,9 @@
 				<p><center>
 					<a href="./about_us.html">
 						<img src="./img/ButtonAboutUs.jpg" alt="About Us" width="175" height="50"></a>
-					<a href="./coming_soon.html">
+					<a href="./product.html">
 						<img src="./img/ButtonProduct.jpg" alt="Product" width="175" height="50" ></a>
-					<a href="./coming_soon.html">
+					<a href="./services.html">
 						<img src="./img/ButtonServices.jpg" alt="Services" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonSpecials.jpg" alt="Specials" width="175" height="50" ></a>
