[SP5] Created Services Page and Updated Buttons
Karen and I created the new services page and updated all of the links to the services button for each page.

--- a/public/services.html
+++ b/public/services.html
@@ -43,7 +43,7 @@
 
 					</div>
 					<div class="titles col-6">
-						<h2>About Us</h2>
+						<h2>Services</h2>
 					</div>
 					<div class="contact col-3">
 
@@ -56,65 +56,56 @@
 	  <main>
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-1">
-
-					</div>
-					<div class="col-10">
-						<center><img src="./img/bakery_outside.jpg" alt="outside"></center>
-					</div>
-					<div class="col-1">
-
-					</div>
-				</div>
-				<div class="row align-items-center">
-					<div class="col-12">
-						<!-- <p>
-							Welcome to our space! Come in and break some bread with us and your
-							family.
-						</p> -->
-						<center><p>
-							The bakery was established by two siblings with the initial idea of selling
-							fresh bread. Every Sunday during family dinner there would be a fresh
-							loaf of bread that would be broken into pieces for everyone to share.
-							The siblings used their family tradition of breaking bread during a
-							family meal as their inspiration and vision for the bakery. The siblings
-							wanted to create a bakery known to their customers as the place to get
-							fresh bread to take home for their own family or to simply sit in the store,
-							“break bread” and share in an experience of some delicious bread.  As
-							the business continued to grow, they expanded their market by selling
-							other products, such as cakes, cookies, and pastries.
-						</p></center>
-					</div>
-				</div>
-				<h3><b>Location and Phone Number</b></h3>
-				<br>
-				<div class="row align-items-center">
-					<div class="col-5">
+					<div class="col-6">
 						<!-- <p>
 							All our baked goods are made fresh daily! Come sit and enjoy a great
 							treat.
 						</p> -->
 						<p>
-							Located conveniently near the Park St T Station in historic Boston, Break
-							Bread Bakery is easy to get to. Our view across Tremont Street to the
-							Granary Burial Ground is lovely to share your bread by.  If you have any
-							questions, stop by or give us a call at (508) 659-9989!  We would love
-							to hear from you.
+							In addition to our baking, we also provide a number of services for our customers.  
+							Are you looking for the perfect cake?  Try our cake tasting!  We can help you 
+							design the perfect cake for any occasion.  We also can deliver the cake right 
+							to your venue of choice.  All of our services come with a full-satisfaction guarantee.
 						</p>
 					</div>
-					<div class="col-7">
-						<img src="./img/map.png" alt="map">
+					<div class="col-6">
+						<img src="./img/services01.jpg" alt="cake1">
 					</div>
 				</div>
-				<h3><b>Contact Us</b></h3>
-				<br>
 				<div class="row align-items-center">
+					<div class="col-6">
+						<img src="./img/services02.jpg" alt="cake2">
+					</div>
+
+					<div class="col-6">
+						<!-- <p>
+							All our baked goods are made fresh daily! Come sit and enjoy a great
+							treat.
+						</p> -->
+						<p>
+							Services:<br></p>
+						<p> Cake tasting<br> </p>
+						<p> Cake design<br> </p>
+						<p> Delivery service<br></p>
+					</div>
+				</div>
+				<div class="row align-items-center">
+					<div class="col-6">
+						<!-- <p>
+							All our baked goods are made fresh daily! Come sit and enjoy a great
+							treat.
+						</p> -->
+					<p>Inquiry Form</p>
 					<form action="./message_confirmation.html">
 						<input id="name" type="text" class="form-control" placeholder="Name">
 						<textarea class="form-control" placeholder="Message" rows="5"></textarea>
 						<input id="submit" type="submit" class="form-control" value="Submit">
 					</form>
-				</div>
+					</div>
+					<div class="col-6">
+						<img src="./img/services03.jpg" alt="cake3">
+					</div>
+				<br>
 			</div>
 	  </main>
 
