--- a/public/coming_soon.html
+++ b/public/coming_soon.html
@@ -32,7 +32,7 @@
 						<img src="./img/ButtonAboutUs.jpg" alt="About Us" width="175" height="50"></a>
 					<a href="./product.html">
 						<img src="./img/ButtonProduct.jpg" alt="Product" width="175" height="50" ></a>
-					<a href="./coming_soon.html">
+					<a href="./services.html">
 						<img src="./img/ButtonServices.jpg" alt="Services" width="175" height="50" ></a>
 					<a href="./coming_soon.html">
 						<img src="./img/ButtonSpecials.jpg" alt="Specials" width="175" height="50" ></a>
