added bread section to products page, added titles to other product sections

--- a/public/product.html
+++ b/public/product.html
@@ -55,8 +55,66 @@
 		<!-- MAIN -->
 	  <main class="products">
 			<div class="container">
+				<div class="row align-items-center justify-content-center">
+					<div class="col-8">
+						<img src="./img/bread.jpg">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6">
+						<h4>Classic Breads</h4>
+						<ul>
+							<li>
+								<em>100% Whole Wheat:</em>
+								A full-flavored, whole wheat bread with 4 grams of fiber per serving.
+							</li>
+							<li>
+								<em>Harvest Bread:</em>
+								A celebration of apples, raisins, walnuts and seeds. We love this bread for turkey sandwiches, makes great breakfast toast
+							</li>
+							<li>
+								<em>Multi-Grain Anadama:</em>
+								We have added a twist to this classic dark bread by loading it with organic grains and giving it a great chewy cornmeal crust.
+							</li>
+							<li>
+								<em>Oat & Honey:</em>
+								My daughter Rebecca's favorite bread. Taste the dark, rich honey; makes the best peanut butter and jelly sandwiches.
+							</li>
+							<li>
+								<em>Sourdough:</em>
+								Our most popular bread -- great with every meal, soft on the inside with a chewy crust.
+							</li>
+						</ul>
+					</div>
+					<div class="col-6">	
+						<h4>Artisan Breads</h4>
+						<ul>
+							<li>
+								<em>Chocolate:</em>
+								The taste of rich chocolate brownies with the consistency of bread. Makes the best ice cream sandwiches and delicious French toast. Enjoy as a snack...
+							</li>
+							<li>
+								<em>Olive Bread:</em>
+								Unbleached flour, water, Sicilian green olives, Kalamata olives, rosemary, salt, yeast, and evaporated cane juice.
+							</li>
+							<li>
+								<em>Red Pepper Hummus with Sesame Seeds & Garlic:</em>
+								Unbleached flour, chick peas, red pepper, Spanish onion, sesame tahini, sesame seeds,  garlic, salt, pepper & yeast
+							</li>
+							<li>
+								<em>Sun-Dried Tomato w/Fresh Basil Oil:</em>
+								Unbleached flour, water, sun-dried tomatoes, garlic, fresh basil, garlic, olive oil, oregano, salt, yeast & evaporated cane juice
+							</li>
+							<li>
+								<em>Baby Spinach, Onion & Garlic Ciabatta:</em>
+								Unbleached flour, water, onions, baby spinach, garlic, soybean oil, black pepper, white pepper, salt and yeast.
+							</li>
+						</ul>
+					</div>
+				</div>
 				<div class="row align-items-center">
 					<div class="col-6">
+						<h4>Cakes</h4>
 						<ul>
 							<li>
 								<em>Midnight chocolate cake (w/o nuts):</em>
@@ -89,6 +147,7 @@
 						<img src="./img/cookies.png" alt="Cookies">
 					</div>
 					<div class="col-6">
+						<h4>Cookies</h4>
 						<ul>
 							<li>
 								<em>Oreo  2.25 (w/o nuts):</em>
@@ -115,6 +174,7 @@
 				</div>
 				<div class="row align-items-center">
 					<div class="col-6">
+						<h4>Pies</h4>
 						<ul>
 							<li>
 								<em>Chocolate cream:</em>
